--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,16 @@
         android:layout_marginEnd="16dp"
         android:text="@string/show_interstitial" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/button_start_review"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/button_show_interstitial"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/review_this_app" />
+
     <LinearLayout
         android:id="@+id/layout_banner"
         android:layout_width="match_parent"
